add cartProduct,overviewProduct classes

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,1 +1,9 @@
 baseUrl = https://saucedemo.com
+stdUsername = standard_user
+password = secret_sauce
+cartPageTitle = Your Cart
+productPageTitle = Products
+checkoutDetailPageTitle = Checkout: Your Information
+addToCartBtnName = Add to cart
+loginPageTitle = Swag Labs
+performanceGlitchUsername = performance_glitch_user
