remove setup code from BrowserFactory

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,3 +7,4 @@ checkoutDetailPageTitle = Checkout: Your Information
 addToCartBtnName = Add to cart
 loginPageTitle = Swag Labs
 performanceGlitchUsername = performance_glitch_user
+errorMsgLockedOutUser = Sorry, this user has been locked out
